Task-3/cube/services/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-pod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-pod
  template:
    metadata:
      name: eureka-pod
      labels:
        app: eureka-pod
    spec:
      containers:
        - name: eureka-pod
          image: eureka:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: LoadBalancer
  selector:
    app: eureka-pod
  ports:
    - port: 8080
      targetPort: 8080
