Task-3/cube/services/predict.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict-pod
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: predict-pod
  template:
    metadata:
      name: predict-pod
      labels:
        app: predict-pod
    spec:
      containers:
        - name: predict-pod
          image: predict:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: predict-balancer
spec:
  type: LoadBalancer
  selector:
    app: predict-pod
  ports:
    - port: 8080
      targetPort: 8080
