Task-3/cube/services/weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-pod
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-pod
  template:
    metadata:
      name: weather-pod
      labels:
        app: weather-pod
    spec:
      containers:
        - name: weather-pod
          image: weather:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: weather-balancer
spec:
  type: LoadBalancer
  selector:
    app: weather-pod
  ports:
    - port: 8080
      targetPort: 8080
